validation added to registration
